<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_navigation_item_members"
        android:enabled="true"
        android:icon="@drawable/ic_member"
        android:title="@string/members_bottom_item"/>
    <item
        android:id="@+id/bottom_navigation_item_groups"
        android:enabled="true"
        android:icon="@drawable/ic_group"
        android:title="@string/groups_bottom_item"/>
    <item
        android:id="@+id/bottom_navigation_item_lessons"
        android:enabled="true"
        android:icon="@drawable/ic_lesson"
        android:title="@string/Lessons_bottom_item"/>
    <item
        android:id="@+id/bottom_navigation_item_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar_bottom_item"/>
</menu>