<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/bottom_sheet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/bottom_add_group_title"
            android:textAppearance="@style/TextAppearance.EsistTheme.TextTitleBottomSheet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_name_layout"
            style="@style/EsistTheme.EditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/group_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bottom_add_group_name_hint"
                android:padding="@dimen/margin_default" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bottom_add_members_to_group_txt"
            android:textAppearance="@style/TextAppearance.EsistTheme.ItemMemberName"
            app:layout_constraintStart_toStartOf="@+id/group_name_layout"
            app:layout_constraintTop_toBottomOf="@+id/group_name_layout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_add_members"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bottom_add_lessons_group_txt"
            android:textAppearance="@style/TextAppearance.EsistTheme.ItemMemberName"
            app:layout_constraintStart_toStartOf="@+id/group_name_layout"
            app:layout_constraintTop_toBottomOf="@+id/recycler_add_members" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_add_lessons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="76dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_group_btn"
                style="@style/EsistTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/gutter_default"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginBottom="@dimen/gutter_default"
                android:text="@string/bottom_add_create" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>