<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:padding="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="16dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lesson_statistic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_info_teal"
        app:layout_constraintBottom_toBottomOf="@+id/back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_arrow" />

    <TextView
        android:id="@+id/lesson_topic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.EsistTheme.MemberTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_arrow"
        tools:text="Computer science 101" />

    <TextView
        android:id="@+id/lesson_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.EsistTheme.MemberBody"
        app:layout_constraintStart_toStartOf="@+id/lesson_topic"
        app:layout_constraintTop_toBottomOf="@+id/lesson_topic"
        tools:text="Tuesday, 7 August" />

    <TextView
        android:id="@+id/lesson_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.EsistTheme.MemberBody"
        app:layout_constraintEnd_toEndOf="@+id/lesson_topic"
        app:layout_constraintTop_toBottomOf="@+id/lesson_topic"
        tools:text="13:30 - 15:00" />

    <TextView
        android:id="@+id/lesson_subject_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lesson_details_subject"
        android:textAppearance="@style/TextAppearance.EsistTheme.MemberBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_date" />

    <TextView
        android:id="@+id/lesson_subject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.EsistTheme.MemberBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lesson_subject_title"
        app:layout_constraintTop_toTopOf="@+id/lesson_subject_title"
        tools:layout_editor_absoluteY="125dp"
        tools:text="Computer science" />

    <TextView
        android:id="@+id/lesson_homework_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_details_homework"
        android:textAppearance="@style/TextAppearance.EsistTheme.MemberBody"
        app:layout_constraintStart_toStartOf="@+id/lesson_book_title"
        app:layout_constraintTop_toBottomOf="@+id/lesson_book" />

    <TextView
        android:id="@+id/lesson_homework"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.EsistTheme.MemberBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lesson_homework_title"
        app:layout_constraintTop_toTopOf="@+id/lesson_homework_title"
        tools:text="Nothing!" />

    <TextView
        android:id="@+id/lesson_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_details_book"
        android:textAppearance="@style/TextAppearance.EsistTheme.MemberBody"
        app:layout_constraintStart_toStartOf="@+id/lesson_subject_title"
        app:layout_constraintTop_toBottomOf="@+id/lesson_subject" />

    <TextView
        android:id="@+id/lesson_book"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.EsistTheme.MemberBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lesson_book_title"
        app:layout_constraintTop_toTopOf="@+id/lesson_book_title"
        tools:text="Introduction to Algorithms is a book on computer programming by Thomas H. Cormen, Charles E. Leiserson, Ronald L. Rivest, and Clifford Stein." />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lesson_attendance"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_homework_title"
        tools:listitem="@layout/item_member_attendance" />

</androidx.constraintlayout.widget.ConstraintLayout>